tooling/nargo_cli/tests/snapshots/execution_success/regression_9116/execute__tests__expanded.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: expanded_code
---
use meta::{derive_deserialize, derive_serialize};

trait Serialize {
    let N: u32;

    fn serialize(self) -> [Field; N];
}

impl Serialize for Field {
    let N: u32 = 1;

    #[inline_always]
    fn serialize(self) -> [Self; 1] {
        [self]
    }
}

impl<let M: u32> Serialize for [Field; M] {
    let N: u32 = M;

    #[inline_always]
    fn serialize(self) -> Self {
        self
    }
}

trait Deserialize {
    let N: u32;

    fn deserialize(fields: [Field; N]) -> Self;
}

impl Deserialize for Field {
    let N: u32 = 1;

    #[inline_always]
    fn deserialize(fields: [Self; 1]) -> Self {
        fields[0_u32]
    }
}

impl<let M: u32> Deserialize for [Field; M] {
    let N: u32 = M;

    #[inline_always]
    fn deserialize(fields: Self) -> Self {
        fields
    }
}

struct Foo {
    x: Field,
    y: [Field; 3],
}

impl Eq for Foo {
    fn eq(_self: Self, _other: Self) -> bool {
        (_self.x == _other.x) & (_self.y == _other.y)
    }
}

impl Serialize for Foo {
    let N: u32 = 4;

    #[inline_always]
    fn serialize(self) -> [Field; 4] {
        let mut result: [Field; 4] = [0_Field; 4];
        let mut offset: u32 = 0_u32;
        let serialized_member: [Field; 1] = self.x.serialize();
        let serialized_member_len: u32 = <Field as Serialize>::N;
        for i in 0_u32..serialized_member_len {
            result[i + offset] = serialized_member[i];
        }
        offset = offset + serialized_member_len;
        let serialized_member: [Field; 3] = self.y.serialize();
        let serialized_member_len: u32 = <[Field; 3] as Serialize>::N;
        for i in 0_u32..serialized_member_len {
            result[i + offset] = serialized_member[i];
        }
        offset = offset + serialized_member_len;
        result
    }
}

impl Deserialize for Foo {
    let N: u32 = 4;

    #[inline_always]
    fn deserialize(serialized: [Field; 4]) -> Self {
        let mut offset: u32 = 0_u32;
        let mut member_fields: [Field; 1] = [0_Field; 1];
        for i in 0_u32..<Field as Deserialize>::N {
            member_fields[i] = serialized[i + offset];
        }
        let x: Field = <Field as Deserialize>::deserialize(member_fields);
        offset = offset + <Field as Deserialize>::N;
        let mut member_fields: [Field; 3] = [0_Field; 3];
        for i in 0_u32..<[Field; 3] as Deserialize>::N {
            member_fields[i] = serialized[i + offset];
        }
        let y: [Field; 3] = <[Field; 3] as Deserialize>::deserialize(member_fields);
        offset = offset + <[Field; 3] as Deserialize>::N;
        Self { x: x, y: y }
    }
}

fn main() {
    let foo: Foo = Foo { x: 0_Field, y: [1_Field, 2_Field, 3_Field] };
    let serialized: [Field; 4] = foo.serialize();
    let deserialized: Foo = <Foo as Deserialize<N = 4>>::deserialize(serialized);
    assert(foo == deserialized);
}

mod meta {
    pub comptime fn derive_serialize(s: TypeDefinition) -> Quoted {
        let typ: Type = s.as_type();
        let nested_struct: (TypeDefinition, [Type]) = typ.as_data_type().unwrap();
        let params: [(Quoted, Type, Quoted)] = nested_struct.0.fields(nested_struct.1);
        let components_of_definition_of_n: [Quoted] = params
            .map(|(_, param_type, _): (Quoted, Type, Quoted)| -> Quoted {
                quote { <$param_type as Serialize>::N }
            });
        let right_hand_side_of_definition_of_n: Quoted =
            components_of_definition_of_n.join(quote {  +  });
        let array_of_quotes_serializing_each_struct_member: [Quoted] = params
            .map(|(param_name, param_type, _): (Quoted, Type, Quoted)| -> Quoted {
                quote {
                let serialized_member = self.$param_name.serialize();
                let serialized_member_len =  < $param_type as Serialize > ::N;
                for i in 0..serialized_member_len {
                    result[i + offset] = serialized_member[i];
                }
                offset += serialized_member_len;
            }
            });
        let serialization_of_struct_members: Quoted =
            array_of_quotes_serializing_each_struct_member.join(quote {  });
        quote {
            impl Serialize for $typ {
                let N: u32 = $right_hand_side_of_definition_of_n;
                #[inline_always]fn serialize(self) -> [Field;
                Self::N] {
                    let mut result = [0;
                    _];
                    let mut offset = 0;
                    $serialization_of_struct_members result
                }
            }
        }
    }

    pub(crate) comptime fn derive_deserialize(s: TypeDefinition) -> Quoted {
        let typ: Type = s.as_type();
        let nested_struct: (TypeDefinition, [Type]) = typ.as_data_type().unwrap();
        let params: [(Quoted, Type, Quoted)] = nested_struct.0.fields(nested_struct.1);
        let components_of_definition_of_n: [Quoted] = params
            .map(|(_, param_type, _): (Quoted, Type, Quoted)| -> Quoted {
                quote { <$param_type as Deserialize>::N }
            });
        let serialized_len: Quoted = components_of_definition_of_n.join(quote {  +  });
        let array_of_quotes_deserializing_each_struct_member: [Quoted] = params
            .map(|(param_name, param_type, _): (Quoted, Type, Quoted)| -> Quoted {
                quote {
                let mut member_fields = [0;
                 < $param_type as Deserialize > ::N];
                for i in 0.. < $param_type as Deserialize > ::N {
                    member_fields[i] = serialized[i + offset];
                }
                let $param_name =  < $param_type as Deserialize > ::deserialize(member_fields);
                offset +=  < $param_type as Deserialize > ::N;
            }
            });
        let deserialization_of_struct_members: Quoted =
            array_of_quotes_deserializing_each_struct_member.join(quote {  });
        let struct_members: Quoted = params
            .map(|(param_name, _, _): (Quoted, Type, Quoted)| -> Quoted quote { $param_name })
            .join(quote { ,  });
        quote {
            impl Deserialize for $typ {
                let N: u32 = $serialized_len;
                #[inline_always]fn deserialize(serialized: [Field;
                Self::N]) -> Self {
                    let mut offset = 0;
                    $deserialization_of_struct_members Self {
                        $struct_members
                    }
                }
            }
        }
    }
}
